Closed Bug 1471131 Opened 7 years ago Closed 7 years ago

mips64 Trampoline-mips64

Categories

(Core :: JavaScript Engine: JIT, defect)

62 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla63
Tracking Status
firefox62 --- wontfix
firefox63 --- fixed

People

(Reporter: qiaopengcheng-hf, Assigned: qiaopengcheng-hf)

Details

Attachments

(1 file, 1 obsolete file)

User Agent: Mozilla/5.0 (X11; Linux mips64; rv:52.0) Gecko/20100101 Firefox/52.0 Build ID: 20180621135500 Steps to reproduce: cd the top inbound directory, ./mach configure ./mach build Actual results: compile source code error at file js/src/jit/mips64/Trampoline-mips64.cpp:728 MoveOperand from; using delete function, Expected results: should compile successfully.
Attached patch Fix compiling error on mips64 (obsolete) — Splinter Review
Attachment #8987738 - Flags: review?(jdemooij)
Comment on attachment 8987738 [details] [diff] [review] Fix compiling error on mips64 Review of attachment 8987738 [details] [diff] [review]: ----------------------------------------------------------------- Looks good, but there's a similar one in Trampoline-mips32.cpp: https://searchfox.org/mozilla-central/rev/39b790b29543a4718d876d8ca3fd179d82fc24f7/js/src/jit/mips32/Trampoline-mips32.cpp#761 Mind removing that line too? Thanks!
Attachment #8987738 - Flags: review?(jdemooij) → review+
Assignee: nobody → qiaopengcheng-hf
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
(In reply to Jan de Mooij [:jandem] from comment #2) > Comment on attachment 8987738 [details] [diff] [review] > Fix compiling error on mips64 > > Review of attachment 8987738 [details] [diff] [review]: > ----------------------------------------------------------------- > > Looks good, but there's a similar one in Trampoline-mips32.cpp: > > https://searchfox.org/mozilla-central/rev/ > 39b790b29543a4718d876d8ca3fd179d82fc24f7/js/src/jit/mips32/Trampoline-mips32. > cpp#761 > > Mind removing that line too? Thanks! Ok, I'll reupload.
Attachment #8987738 - Attachment is obsolete: true
Attachment #8988029 - Flags: review?(jdemooij)
Comment on attachment 8988029 [details] [diff] [review] mips trampoline compiling error Review of attachment 8988029 [details] [diff] [review]: ----------------------------------------------------------------- Thanks!
Attachment #8988029 - Flags: review?(jdemooij) → review+
Pushed by apavel@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/1148c907376b Fix compiling error of Trampoline on mips. r=jandem
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla63
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: