Bug 1471131 - Fix compiling error of Trampoline on mips. r=jandem